--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ tmp
 application/sessions/*
 application/logs/*
 application/uploads/*
-public/bower_components
+bower_components
 *.patch
 patches/
 .idea/
